# Math-Charter

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-release.yml
lib/: CMakeLists.txt
lib-assist/: CMakeLists.txt  assist.cpp  assist.h  config.h  mouse_controller.h
lib-curve/: CMakeLists.txt  Curve2d.cpp  Curve2d.h  Line2d.cpp  Line2d.h  VertexGenerator.cpp  VertexGenerator.h
lib-parser/: CMakeLists.txt  Expression.cpp  Expression.h  Node.cpp  Node.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  StateMachine.cpp  StateMachine.h  SymbolTable.cpp  SymbolTable.h  Tokenizer.cpp
lib-scene/: CMakeLists.txt  GraphViewport.cpp  GraphViewport.h  Graphscene.cpp  Graphscene.h
lib-shader/: CMakeLists.txt  Shader.cpp  Shader.h
lib-ui/: Assist-UI.cpp  Assist-UI.h  CMakeLists.txt  Common-UI.cpp  Common-UI.h  MenuBar-UI.cpp  MenuBar-UI.h  Preferences-UI.cpp  Preferences-UI.h  Viewport-UI.cpp  Viewport-UI.h
lib/glad/: CMakeLists.txt  glad.c  glad.h
library-curve/: CMakeLists.txt  curve2d.cpp  curve2d.h  line2d.cpp  line2d.h
library-helper/: CMakeLists.txt  config.h  helper.cpp  helper.h  mouse_controller.cpp  mouse_controller.h
library-parser/: CMakeLists.txt  Expression.cpp  Expression.h  Parser.cpp  Scanner.cpp  Scanner.h  StateMachine.cpp  StateMachine.h  Tokenizer.cpp  Tokenizer.h
library-scene/: CMakeLists.txt  graphscene.cpp  graphscene.h
library-shader/: CMakeLists.txt  shader.cpp  shader.h
program-parser/: CMakeLists.txt  parser-main.cpp
program-parser-test/: CMakeLists.txt  parser-test.cpp
program-render-test/: CMakeLists.txt  render-test.cpp  shader.fs  shader.vs  values.h
program-render-test/shaders/: shader.vs
program-rigid-render/: CMakeLists.txt  render-main.cpp
program-rigid-render/shaders/: shader.fs
program-scanner/: CMakeLists.txt  code.txt
program-scanner-test/: CMakeLists.txt  code.txt  scanner-test.cpp
program-sole-ui/: CMakeLists.txt  sole-ui-main.cpp
src/: main.cpp
tests/: test_logic.cpp
unit-tests/: CMakeLists.txt
unit-tests/parser/: test_parser.cpp  test_scanner.cpp
